==> SCU-Maker/Makers-/电子墨水屏/4_3inch-ePaper-示例程序/4_3inch-ePaper-demo/Open103Z/User/epd.c <==
#include "epd.h"

void epd_reset(void)
{
	GPIO_ResetBits(EPD_RESET_PORT, EPD_RESET_PIN); 
	
	_delay();
	_delay();
	
	GPIO_SetBits(EPD_RESET_PORT, EPD_RESET_PIN);
	
	_delay();
	_delay();
	_delay();
	_delay();
	_delay();
	_delay();
	_delay();
	_delay();
	
  GPIO_ResetBits(EPD_RESET_PORT, EPD_RESET_PIN); 

	CM3_SysTickDelayMS(3000);                                                       //复位后强制延时 3秒
}

void epd_wakeup(void)
{
	GPIO_ResetBits(EPD_WAKEUP_PORT, EPD_WAKEUP_PIN); 
	
	_delay();
	_delay();
	
	GPIO_SetBits(EPD_WAKEUP_PORT, EPD_WAKEUP_PIN);
	
	_delay();
	_delay();
	_delay();
	_delay();
	_delay();
	_delay();
	_delay();
	_delay();
	
  GPIO_ResetBits(EPD_WAKEUP_PORT, EPD_WAKEUP_PIN); 

	CM3_SysTickDelayMS(10);                                                       //唤醒后强制延时 10ms	
}
