==> SCU-Maker/Makers-/电子墨水屏/4_3inch-ePaper-示例程序/4_3inch-ePaper-demo/XNUCLEO-F103RB/src/epd.cpp <==
#include "epd.h"
#include "mbed.h"

void epd_reset(void)
{
	reset = 0;
	wait_us(10);
	reset = 1;
	wait_us(500);
	reset = 0;
	wait(3);
}

void epd_wakeup(void)
{
	wake_up = 0;
	wait_us(10);
	wake_up = 1;
	wait_us(500);
	wake_up = 0;
	wait_ms(10);
}
